# fleek-assignment

./: README.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  client.ts  index.tsx
frontend/src/components/: auth.module.css  auth.tsx  list.tsx  view.module.css  view.tsx
frontend/src/pages/: auth.module.css  auth.tsx  list.tsx  view.tsx
server/: .gitignore  package.json  tsconfig.json
server/native/: Cargo.toml  index.d.ts
server/native/src/: error.rs  lib.rs  types.rs
server/native/src/db/: batch.rs  bincode.rs  keys.rs  rocks.rs
server/native/src/utils/: bincode_vec_push.rs  clock.rs  hash.rs
server/src/: auth.ts  db.ts  ipfs.ts  main.ts  proxy.ts  resolvers.ts  schema.ts  server.ts  utils.ts
