[package]
name = "server"
version = "0.1.0"
authors = ["Parsa Ghadimi <qti3eqti3e@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "server"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = "0.7.0"
serde = { version="1.0.117", features=["derive"] }
chrono = { version="0.4.19", features=["serde"] }
rocksdb = "0.15.0"
crossbeam = "0.8.0"
serde_json = "1.0.59"
bincode = "1.3.1"
sha-1 = "0.9.2"
md5 = "0.7.0"
rand = "0.8"
